force-app/main/default/objects/Contact/fields/ARTL_Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Alternate_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>