force-app/main/default/objects/Contact/fields/ARTL_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Contact</fullName>
            </value>
            <value>
                <fullName>Authorized Signatory</fullName>
            </value>
            <value>
                <fullName>Business Head</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>CTO</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>FL Coordinator</fullName>
            </value>
            <value>
                <fullName>IT Contact</fullName>
            </value>
            <value>
                <fullName>Marketing Contact</fullName>
            </value>
            <value>
                <fullName>Middle Management</fullName>
            </value>
            <value>
                <fullName>MOB Coordinator</fullName>
            </value>
            <value>
                <fullName>Network Contact</fullName>
            </value>
            <value>
                <fullName>Network Planning</fullName>
            </value>
            <value>
                <fullName>Purchase Contact</fullName>
            </value>
            <value>
                <fullName>Regional Head</fullName>
            </value>
            <value>
                <fullName>Sales Contact</fullName>
            </value>
            <value>
                <fullName>Sales Head</fullName>
            </value>
            <value>
                <fullName>Senior Management</fullName>
            </value>
            <value>
                <fullName>Service Contact</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>Voice co-ordinator</fullName>
            </value>
            <value>
                <fullName>Delivery Contact</fullName>
            </value>
            <value>
                <fullName>Resident Engineer</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Company Coordinator</fullName>
            </value>
            <value>
                <fullName>Local Contact Person</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Delivery/Billing Contact</fullName>
                <isActive>false</isActive>
                <label>Delivery/Billing Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>