force-app/main/default/objects/Contact/fields/ARTL_Email_Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Email_Validation_Date__c</fullName>
    <label>Email Validation Date</label>
    <type>DateTime</type>
</CustomField>