force-app/main/default/objects/Contact/fields/ARTL_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>