force-app/main/default/objects/Contact/fields/ARTL_External_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>ARTL_External_Contact_Number__c</fullName>
    <displayFormat>CN-{00000000}</displayFormat>
    <label>External Contact Number</label>
    <type>AutoNumber</type>
</CustomField>