force-app/main/default/objects/Contact/fields/ARTL_Interaction_Level__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Interaction_Level__c</fullName>
    <label>Interaction Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board Level</fullName>
            </value>
            <value>
                <fullName>Decision Makers/ CXOs</fullName>
            </value>
            <value>
                <fullName>Important Contacts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>