force-app/main/default/objects/Contact/fields/ARTL_SAM_Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>ARTL_SAM_Validation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SAM Validation Date</label>
    <type>DateTime</type>
</CustomField>