force-app/main/default/objects/Contact/fields/ARTL_Stakeholder_Score__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Stakeholder_Score__c</fullName>
    <label>Stakeholder Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>1.0</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
            <value>
                <fullName>2.5</fullName>
            </value>
            <value>
                <fullName>3.0</fullName>
            </value>
            <value>
                <fullName>3.5</fullName>
            </value>
            <value>
                <fullName>4.0</fullName>
            </value>
            <value>
                <fullName>4.5</fullName>
            </value>
            <value>
                <fullName>5.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>