force-app/main/default/objects/Contact/fields/Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>