force-app/main/default/objects/Contact/fields/NBA_Account__c.field-meta.xml
<CustomField>
    <fullName>NBA_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NBA Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (NBA Account)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>