force-app/main/default/objects/Contact/fields/Staging_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Staging_Record_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Staging Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>