force-app/main/default/objects/Contact/fields/vlocity_cmt__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Status__c</fullName>
    <description>Status of this Contact such as active, inactive, expired or pending. Values can be customized by the deploying company. Custom logic should also set the IsActive__c field correspondingly; e.g. inactive, expired and pending may all translate to IsActive__c = False.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>