force-app/main/default/objects/Contact/recordTypes/ARTL_BCP_DCP_Contact.recordType-meta.xml
<RecordType>
    <fullName>ARTL_BCP_DCP_Contact</fullName>
    <active>true</active>
    <label>BCP/DCP Contact</label>
</RecordType>