force-app/main/default/objects/Contact/recordTypes/ARTL_Internal_Contact.recordType-meta.xml
<RecordType>
    <fullName>ARTL_Internal_Contact</fullName>
    <active>true</active>
    <label>Internal Contact</label>
</RecordType>