force-app/main/default/objects/Contact/recordTypes/ARTL_Party_Contact.recordType-meta.xml
<RecordType>
    <fullName>ARTL_Party_Contact</fullName>
    <active>true</active>
    <label>Party Contact</label>
</RecordType>