force-app/main/default/objects/Contact/validationRules/ARTL_Account_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_Account_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    NOT( Is_Converted_From_Lead__c ),
    ISBLANK( AccountId  )
)</errorConditionFormula>
    <errorMessage>Please provide a valid Account.</errorMessage>
</ValidationRule>