force-app/main/default/objects/Contact/validationRules/ARTL_ChangeNotAllowedForBCPDCP.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_ChangeNotAllowedForBCPDCP</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName == &apos;ARTL_BCP_DCP_Contact&apos;,
    OR(
        ISCHANGED(Salutation),
        ISCHANGED(FirstName),
        ISCHANGED(MiddleName),
        ISCHANGED(LastName),
        ISCHANGED(Suffix)
    )
)</errorConditionFormula>
    <errorMessage>To update a BCP/DCP contact please use the global search and Edit button on the record.</errorMessage>
</ValidationRule>