force-app/main/default/objects/Contact/validationRules/ARTL_ContactPhoneValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_ContactPhoneValidation</fullName>
    <active>true</active>
    <description>This VR is to validate that only only numeric values(0-9) are only allowed in Mobile/Phone Number</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Phone)),
NOT(REGEX(Phone,&quot;[0-9]{6,14}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Only Numeric Values (0-9) up to 14 digits are allowed in Phone Number. Alphabets and Special characters are not allowed.</errorMessage>
</ValidationRule>