force-app/main/default/objects/Contact/validationRules/ARTL_DepartmentValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_DepartmentValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Department ,&quot;[a-zA-Z0-9 ./&apos;]*&quot;))</errorConditionFormula>
    <errorDisplayField>Department</errorDisplayField>
    <errorMessage>Department should not contain any Special Characters except ./,</errorMessage>
</ValidationRule>