force-app/main/default/objects/Contact/validationRules/ARTL_DesignationValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_DesignationValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( ARTL_Designation__c ,&quot;[a-zA-Z0-9 \\-.&amp;/,()&apos;]*&quot;))</errorConditionFormula>
    <errorDisplayField>ARTL_Designation__c</errorDisplayField>
    <errorMessage>Designation should not contain any Special Characters except ./&apos;</errorMessage>
</ValidationRule>