force-app/main/default/objects/Contact/validationRules/ARTL_FirstNameValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_FirstNameValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( FirstName ,&quot;[a-zA-Z0-9 ./()&amp;.-]*&quot;))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name should not contain Special Characters except  ./()&amp;.-.</errorMessage>
</ValidationRule>