force-app/main/default/objects/Contact/validationRules/ARTL_LastNameValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_LastNameValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( LastName ,&quot;[a-zA-Z0-9 ./()&amp;.-]*&quot;))</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>Last Name should not contain any Special Characters except ./()&amp;.-.</errorMessage>
</ValidationRule>