force-app/main/default/objects/Contact/validationRules/ARTL_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_Mandatory_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),NOT( Is_Converted_From_Lead__c ),OR(  ISBLANK(TEXT(ARTL_Contact_Role__c)) , ISBLANK( ARTL_Designation__c ) ,ISBLANK( FirstName ), ISBLANK( Phone ),ISBLANK( Email  )))</errorConditionFormula>
    <errorMessage>Please fill in all the mandatory fields on Contact[FirstName, Designation, Contact Role, Email, Phone].</errorMessage>
</ValidationRule>