force-app/main/default/objects/Contact/validationRules/ARTL_RestrictSAMToUpdateOtherContactType.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_RestrictSAMToUpdateOtherContactType</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Permission.ARTL_SAM_General_User,
NOT(ISPICKVAL(ARTL_Contact_Role__c, &quot;Service Contact&quot;)),
NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>You can only access Service Contact</errorMessage>
</ValidationRule>