force-app/main/default/objects/Contact/validationRules/ARTL_ValidatePhoneFormatValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_ValidatePhoneFormatValidation</fullName>
    <active>false</active>
    <description>This VR is to validate that only only numeric values(0-9) are only allowed in Mobile/Phone Number</description>
    <errorConditionFormula>AND
(
NOT(ISBLANK(Phone)),
NOT(REGEX(Phone, &quot;^[0-9]{10}$&quot;))
)</errorConditionFormula>
    <errorMessage>Mobile/Phone Number must include only 10 digit Numeric values. Please remove any alphabets and/or special characters.</errorMessage>
</ValidationRule>