force-app/main/default/objects/Contact/validationRules/SAMContactAccess.validationRule-meta.xml
<ValidationRule>
    <fullName>SAMContactAccess</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
CONTAINS($UserRole.DeveloperName,&quot;SAM&quot;) ,
NOT(ISPICKVAL(ARTL_Contact_Role__c, &quot;Service Contact&quot;))
)</errorConditionFormula>
    <errorMessage>You can only access Service Contact</errorMessage>
</ValidationRule>