force-app/main/default/objects/Contact/listViews/My_BCP_DCP_Contacts.listView-meta.xml
<ListView>
    <fullName>My_BCP_DCP_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ARTL_Contact_Role__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.ARTL_BCP_DCP_Contact</value>
    </filters>
    <label>My BCP/DCP Contacts</label>
</ListView>